axion-ui/axion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: axion-ui
  template:
    metadata:
      name: axion-pod
      labels:
        app: axion-ui
    spec:
      containers:
        - name: axion-container
          image: gauravajayacr.azurecr.io/axion-ui:v50
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
