axion-ui/axion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-service
  namespace: dev
  labels:
    app: axion-ui
spec:
  selector:
    app: axion-ui
  ports:
    - port: 9050
      targetPort: 80
  type: ClusterIP
