axion-ui/axion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ingress
  namespace: dev
  labels:
    app.kubernetes.io/name: axion-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: axion.hypertrace.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axion-service
                port:
                  number: 9050
